# Projects-Python-NodeTreeApp

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/core/: settings.py
app/db/: __init__.py  models.py
app/node/: crud.py  node.py  schemas.py
migrations/: env.py
migrations/versions/: df488ca81600_initial_migration.py
