[tool.poetry]
name = "managefoldersapp"
version = "0.1.0"
description = ""
authors = ["ViAchKoN <Vikon113@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
alembic = "^1.7.4"
psycopg2 = "^2.9.1"
asyncpg = "^0.24.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
